--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,8 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "daily"
-      time: "08:00"
-      timezone: "Asia/Tokyo"
-
+      interval: 'daily'
+      time: '08:00'
+      timezone: 'Asia/Tokyo'
