[Experimental] Try most of asdf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
   "editor.defaultFormatter": "dprint.dprint",
   "editor.formatOnSave": true,
   "cSpell.words": [
-    "dprint"
+    "adoptium",
+    "denoland",
+    "dprint",
+    "idris"
   ],
   "json.schemas": [
     {
