--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>kachick/renovate-config-dprint"
+    "local>kachick/renovate-config-asdf"
   ],
   "labels": [
-    "renovate"
+    "renovate",
+    "dependencies"
   ]
 }
