--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "validate": "renovate-config-validator"
+    "validate": "./validate.bash"
   },
   "devDependencies": {
     "renovate": "^32.115.0"
