Prefer json5 for now
Note(ja) - https://github.com/kachick/times_kachick/issues/181

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,14 @@ on:
     branches: [main]
     paths:
       - '.github/workflows/ci.yml'
-      - '*.json'
+      - '**/*.json'
+      - '**/*.json5'
       - 'validate.bash'
   pull_request:
     paths:
       - '.github/workflows/ci.yml'
-      - '*.json'
+      - '**/*.json'
+      - '**/*.json5'
       - 'validate.bash'
 
 jobs:
