--- a/plugins/clojure.json5
+++ b/plugins/clojure.json5
@@ -8,7 +8,7 @@
       // https://github.com/clojure/brew-install/tags
       "depNameTemplate": "clojure/brew-install",
       "datasourceTemplate": "github-tags",
-      "versioningTemplate": "regex:^(?<major>\\d+?)\\.(?<minor>\\d+?)\\.(?<patch>\\S+)?$"
+      "versioningTemplate": "regex:^(?<major>\\d+?)\\.(?<minor>\\d+?)\\.(?<patch>\\d+)\\.(?<build>\\d+)$"
     }
   ]
 }
