hermit will fit?

--- a/plugins/java.json5
+++ b/plugins/java.json5
@@ -2,12 +2,33 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Bump java in .tool-versions",
   "regexManagers": [
+    // https://github.com/halcyon/asdf-java/blame/master/data/jdk-linux-x86_64.tsv
     {
       "fileMatch": [".tool-versions"],
-      "matchStrings": ["java (?<currentValue>.+?)\\n"],
-      "datasourceTemplate": "adoptium-java",
-      "packageNameTemplate": "java-jre",
-      "depNameTemplate": "adoptium-java"
+      "matchStrings": ["java adoptopenjdk-(?<currentValue>16\\S+)\\n"],
+      // https://github.com/adoptium/temurin16-binaries/releases
+      "depNameTemplate": "adoptium/temurin16-binaries",
+      "datasourceTemplate": "github-releases",
+      "extractVersionTemplate": "^jdk-(?<version>\\S+)",
+      "versioningTemplate": "hermit"
+    },
+    {
+      "fileMatch": [".tool-versions"],
+      "matchStrings": ["java adoptopenjdk-(?<currentValue>17\\S+)\\n"],
+      // https://github.com/adoptium/temurin17-binaries/releases
+      "depNameTemplate": "adoptium/temurin17-binaries",
+      "datasourceTemplate": "github-releases",
+      "extractVersionTemplate": "^jdk-(?<version>\\S+)",
+      "versioningTemplate": "hermit"
+    },
+    {
+      "fileMatch": [".tool-versions"],
+      "matchStrings": ["java adoptopenjdk-(?<currentValue>18\\S+)\\n"],
+      // https://github.com/adoptium/temurin18-binaries/releases
+      "depNameTemplate": "adoptium/temurin18-binaries",
+      "datasourceTemplate": "github-releases",
+      "extractVersionTemplate": "^jdk-(?<version>\\S+)",
+      "versioningTemplate": "hermit"
     }
   ]
 }
