Is this need to handle channel in hermit?

--- a/plugins/java.json5
+++ b/plugins/java.json5
@@ -9,7 +9,7 @@
       // https://github.com/adoptium/temurin16-binaries/releases
       "depNameTemplate": "adoptium/temurin16-binaries",
       "datasourceTemplate": "github-releases",
-      "extractVersionTemplate": "^jdk-(?<version>\\S+)",
+      "extractVersionTemplate": "^jdk-(?<version>16\\S+?)\\+(?<channel>\\S+)",
       "versioningTemplate": "hermit"
     },
     {
@@ -18,7 +18,7 @@
       // https://github.com/adoptium/temurin17-binaries/releases
       "depNameTemplate": "adoptium/temurin17-binaries",
       "datasourceTemplate": "github-releases",
-      "extractVersionTemplate": "^jdk-(?<version>\\S+)",
+      "extractVersionTemplate": "^jdk-(?<version>17\\S+?)\\+(?<channel>\\S+)",
       "versioningTemplate": "hermit"
     },
     {
@@ -27,7 +27,7 @@
       // https://github.com/adoptium/temurin18-binaries/releases
       "depNameTemplate": "adoptium/temurin18-binaries",
       "datasourceTemplate": "github-releases",
-      "extractVersionTemplate": "^jdk-(?<version>\\S+)",
+      "extractVersionTemplate": "^jdk-(?<version>18\\S+?)\\+(?<channel>\\S+)",
       "versioningTemplate": "hermit"
     }
   ]
