--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ on:
       - 'scripts/validator.cr'
 
 jobs:
-  spec:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
           cache: npm
       - run: npm install
       - uses: crystal-lang/install-crystal@v1
-      - run: crystal spec
+      - run: make test
   validate:
     runs-on: ubuntu-latest
     steps:
@@ -40,4 +40,4 @@ jobs:
         run: npm install
       - uses: crystal-lang/install-crystal@v1
       - name: Validate
-        run: crystal run scripts/validator.cr -- run
+        run: make validate
