--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,4 +18,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: crystal-lang/install-crystal@v1
-      - run: crystal tool format --check
+      - run: make crystal-format-check
