--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -3,47 +3,32 @@ on:
   push:
     branches: [main]
     paths:
-      - '.github/workflows/ci.yml'
+      - '.github/workflows/validation.yml'
       - '**/*.json'
       - '!.vscode'
       - '**/*.json5'
-      - 'spec/**'
       - 'scripts/validator.cr'
       - 'Makefile'
   pull_request:
     paths:
-      - '.github/workflows/ci.yml'
+      - '.github/workflows/validation.yml'
       - '**/*.json'
       - '!.vscode'
       - '**/*.json5'
-      - 'spec/**'
       - 'scripts/validator.cr'
       - 'Makefile'
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: npm
-      - run: npm install
-      - uses: crystal-lang/install-crystal@v1
-      - run: make test
-
   set-matrix:
     runs-on: ubuntu-latest
     outputs:
-      configs: ${{ steps.set-matrix.outputs.value }}
+      list: ${{ steps.set-matrix.outputs.value }}
     steps:
       - name: make values
         id: set-matrix
         run: |
-          config_by_line=$(git ls-files 'plugins' 'default.json' 'renovate.json')
-          configs=$(jq -cnM --arg var "$config_by_line" '$var|split("\n")')
-          echo "::set-output name=value::${configs}"
+          list=$(git ls-files 'plugins' 'default.json' 'renovate.json' | jq -c)
+          echo "::set-output name=value::${list}"
 
   validate:
     needs: [set-matrix]
@@ -51,7 +36,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: ${{fromJson(needs.set-matrix.outputs.configs)}}
+        config: ${{fromJson(needs.set-matrix.outputs.list)}}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
