--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,4 +60,4 @@ jobs:
           cache: npm
       # npm ci --ignore-scripts do not cover RE2
       - run: npm install
-      - run: RENOVATE_CONFIG_FILE=${${{ matrix.config }}} npx renovate-config-validator
+      - run: RENOVATE_CONFIG_FILE=${{ matrix.config }} npx renovate-config-validator
