Set limit for all GitHub Actions

--- a/.github/workflows/auto-merge-dependabot-prs.yml
+++ b/.github/workflows/auto-merge-dependabot-prs.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   auto-merge-dependabot-prs:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
