--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ on:
 
 jobs:
   test:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -32,16 +33,34 @@ jobs:
       - run: npm install
       - uses: crystal-lang/install-crystal@v1
       - run: make test
-  validate:
+
+  set-matrix:
+    timeout-minutes: 1
     runs-on: ubuntu-latest
+    outputs:
+      configs: ${{ steps.set-matrix.outputs.value }}
+    steps:
+      - uses: actions/checkout@v3
+      - id: set-matrix
+        run: |
+          config_by_line=$(git ls-files 'plugins' 'default.json' 'renovate.json')
+          configs=$(jq -cnM --arg var "$config_by_line" '$var|split("\n")')
+          echo "::set-output name=value::${configs}"
+
+  validate:
+    timeout-minutes: 5
+    needs: [set-matrix]
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        config: ${{fromJson(needs.set-matrix.outputs.configs)}}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: npm
-      - name: Install dependencies
-        run: npm install
-      - uses: crystal-lang/install-crystal@v1
-      - name: Validate
-        run: make validate
+      # npm ci --ignore-scripts do not cover RE2
+      - run: npm install
+      - run: RENOVATE_CONFIG_FILE=${{ matrix.config }} npx renovate-config-validator
