Integrate ameba for a crystal linter

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "streetsidesoftware.code-spell-checker",
     "katjanakosic.vscode-json5",
     "crystal-lang-tools.crystal-lang",
+    "veelenga.crystal-ameba",
     "ms-vscode.makefile-tools"
   ]
 }
