--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,3 +23,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: crystal-lang/install-crystal@v1
       - run: make crystal-format-check
+      - uses: crystal-ameba/github-action@v0.3.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
