--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
+    "github>kachick/renovate-config-dprint",
     "local>kachick/renovate-config-asdf"
   ],
   "labels": [
