--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - '!.vscode'
       - '**/*.json5'
       - 'spec/**'
-      - 'scripts/validator.cr'
+      - 'src/**'
       - 'Makefile'
   pull_request:
     paths:
@@ -17,7 +17,7 @@ on:
       - '!.vscode'
       - '**/*.json5'
       - 'spec/**'
-      - 'scripts/validator.cr'
+      - 'src/**'
       - 'Makefile'
 
 jobs:
