--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,10 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
-      time: '08:00'
-      timezone: 'Asia/Tokyo'
+  - package-ecosystem: 'npm'
+    directory: '/'
+    schedule:
+      interval: 'daily'
+    ignore:
+      - dependency-name: '@types/*'
+        update-types: ['version-update:semver-major']
