I feel both of pin(#105) and replace(:preserveSemverRanges) strategies will not fit

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,14 @@
     "github>kachick/renovate-config-dprint",
     "local>kachick/renovate-config-asdf"
   ],
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "rangeStrategy": "bump"
+    }
+  ],
   "labels": [
     "renovate",
     "dependencies",
