Strictfy file name patterns for example to avoid test fixtures
#106

--- a/plugins/crystal.json5
+++ b/plugins/crystal.json5
@@ -3,7 +3,7 @@
   "description": "Bump crystal in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["crystal (?<currentValue>.+?)\\n"],
       "depNameTemplate": "crystal-lang/crystal",
       "datasourceTemplate": "github-tags"
