--- a/plugins/elm.json5
+++ b/plugins/elm.json5
@@ -3,7 +3,7 @@
   "description": "Bump elm in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["elm (?<currentValue>.+?)\\n"],
       "depNameTemplate": "elm/compiler",
       "datasourceTemplate": "github-releases"
