--- a/plugins/java.json5
+++ b/plugins/java.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     // https://github.com/halcyon/asdf-java/blame/master/data/jdk-linux-x86_64.tsv
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["java adoptopenjdk-(?<currentValue>16\\S+)\\n"],
       // https://github.com/adoptium/temurin16-binaries/releases
       "depNameTemplate": "adoptium/temurin16-binaries",
@@ -14,7 +14,7 @@
       "versioningTemplate": "hermit"
     },
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["java adoptopenjdk-(?<currentValue>17\\S+)\\n"],
       // https://github.com/adoptium/temurin17-binaries/releases
       "depNameTemplate": "adoptium/temurin17-binaries",
@@ -23,7 +23,7 @@
       "versioningTemplate": "hermit"
     },
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["java adoptopenjdk-(?<currentValue>18\\S+)\\n"],
       // https://github.com/adoptium/temurin18-binaries/releases
       "depNameTemplate": "adoptium/temurin18-binaries",
