--- a/plugins/nim.json5
+++ b/plugins/nim.json5
@@ -3,7 +3,7 @@
   "description": "Bump nim in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["nim (?<currentValue>.+?)\\n"],
       "depNameTemplate": "nim-lang/Nim",
       "datasourceTemplate": "github-tags",
