--- a/plugins/clojure.json5
+++ b/plugins/clojure.json5
@@ -3,7 +3,7 @@
   "description": "Bump clojure in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["clojure (?<currentValue>.+?)\\n"],
       // https://github.com/clojure/brew-install/tags
       "depNameTemplate": "clojure/brew-install",
