--- a/plugins/helm.json5
+++ b/plugins/helm.json5
@@ -3,7 +3,7 @@
   "description": "Bump Helm in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["helm (?<currentValue>.+?)\\n"],
       "depNameTemplate": "helm/helm",
       "datasourceTemplate": "github-tags",
