--- a/plugins/scala.json5
+++ b/plugins/scala.json5
@@ -3,14 +3,14 @@
   "description": "Bump scala in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["scala (?<currentValue>2\\..+?)\\n"],
       "depNameTemplate": "scala/scala",
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^v(?<version>\\S+)"
     },
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["scala (?<currentValue>3\\..+?)\\n"],
       "depNameTemplate": "lampepfl/dotty",
       "datasourceTemplate": "github-tags"
