--- a/plugins/trivy.json5
+++ b/plugins/trivy.json5
@@ -3,7 +3,7 @@
   "description": "Bump trivy in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["trivy (?<currentValue>.+?)\\n"],
       "depNameTemplate": "aquasecurity/trivy",
       "datasourceTemplate": "github-tags",
