--- a/plugins/zig.json5
+++ b/plugins/zig.json5
@@ -3,7 +3,7 @@
   "description": "Bump zig in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": [".tool-versions"],
+      "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["zig (?<currentValue>.+?)\\n"],
       // https://github.com/ziglang/zig/tags
       "depNameTemplate": "ziglang/zig",
