Specify only for dprint plugins

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,7 @@
   "dependencyDashboard": true,
   "extends": [
     "config:base",
-    "github>kachick/renovate-config-dprint",
+    "github>kachick/renovate-config-dprint:plugins",
     "local>kachick/renovate-config-asdf"
   ],
   "packageRules": [
