Enable automerger for renovate PRs

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,14 @@
         "*"
       ],
       "rangeStrategy": "bump"
+    },
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    },
+    {
+      "matchDepTypes": ["devDependencies"],
+      "automerge": true
     }
   ],
   "labels": [
