--- a/plugins/lua.json5
+++ b/plugins/lua.json5
@@ -6,9 +6,9 @@
       "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["lua (?<currentValue>.+?)\\n"],
       // Plugin Fetcher Permalink: https://github.com/Stratus3D/asdf-lua/blob/d99f76c280241950c288503eb89d2532085d9fd4/bin/list-all#L13-L45
-      // DataSource URL: https://github.com/lua/lua/tags
+      // DataSource URL: https://github.com/lua/lua/releases
       "depNameTemplate": "lua/lua",
-      "datasourceTemplate": "github-tags",
+      "datasourceTemplate": "github-releases",
       "extractVersionTemplate": "^v(?<version>\\S+)"
     }
   ]
