I should dig `fileMatch` detail

--- a/plugins/lua.json5
+++ b/plugins/lua.json5
@@ -3,7 +3,7 @@
   "description": "Bump lua in .tool-versions",
   "regexManagers": [
     {
-      "fileMatch": ["\\.tool-versions$"],
+      "fileMatch": [".tool-versions"],
       "matchStrings": ["lua (?<currentValue>.+?)\\n"],
       // Plugin Fetcher Permalink: https://github.com/Stratus3D/asdf-lua/blob/d99f76c280241950c288503eb89d2532085d9fd4/bin/list-all#L13-L45
       // DataSource URL: https://github.com/lua/lua/releases
