Tweaks default ignorePaths
https://github.com/kachick/renovate-config-asdf/pull/112#issuecomment-1250039148

--- a/renovate.json
+++ b/renovate.json
@@ -26,5 +26,17 @@
     "renovate",
     "dependencies",
     "ignore-this-label-just-for-trigger-renovate-2"
+  ],
+  "ignorePaths": [
+    "**/node_modules/**",
+    "**/bower_components/**",
+    "**/vendor/**",
+    "**/__tests__/**",
+    "**/test/**",
+    "**/tests/**",
+    "**/__fixtures__/**",
+    "**/fixtures/**",
+    "bin/",
+    "lib/"
   ]
 }
