--- a/.github/workflows/ci-crystal.yml
+++ b/.github/workflows/ci-crystal.yml
@@ -8,6 +8,8 @@ on:
       - 'src/**'
       - 'shard.yml'
       - 'shard.lock'
+      - 'package.json'
+      - 'package-lock.json'
   pull_request:
     paths:
       - '.github/workflows/ci-crystal.yml'
@@ -15,6 +17,8 @@ on:
       - 'src/**'
       - 'shard.yml'
       - 'shard.lock'
+      - 'package.json'
+      - 'package-lock.json'
 
 jobs:
   spec:
@@ -23,4 +27,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: crystal-lang/install-crystal@v1
+      # Need node.js to install validator. Spec includes the validator runner
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+      - run: npm ci
       - run: crystal spec
