Strictfy for line start of tool names
Apply https://github.com/kachick/renovate-config-asdf/commit/5626e261ff4e26fecce8587d42c3eaac9746bb9e ways for all

--- a/plugins/clojure.json5
+++ b/plugins/clojure.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["clojure (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)clojure (?<currentValue>.+?)\\n"],
       // https://github.com/clojure/brew-install/tags
       "depNameTemplate": "clojure/brew-install",
       "datasourceTemplate": "github-tags",
