--- a/plugins/elixir.json5
+++ b/plugins/elixir.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["elixir (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)elixir (?<currentValue>.+?)\\n"],
       "depNameTemplate": "elixir-lang/elixir",
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^v(?<version>\\S+)"
