--- a/plugins/elm.json5
+++ b/plugins/elm.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["elm (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)elm (?<currentValue>.+?)\\n"],
       "depNameTemplate": "elm/compiler",
       "datasourceTemplate": "github-releases"
     }
