--- a/plugins/golang.json5
+++ b/plugins/golang.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["golang (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)golang (?<currentValue>.+?)\\n"],
       "depNameTemplate": "golang/go",
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^go(?<version>\\S+)"
