--- a/plugins/nim.json5
+++ b/plugins/nim.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["nim (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)nim (?<currentValue>.+?)\\n"],
       "depNameTemplate": "nim-lang/Nim",
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^v(?<version>\\S+)"
