--- a/plugins/nodejs.json5
+++ b/plugins/nodejs.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["nodejs (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)nodejs (?<currentValue>.+?)\\n"],
       "depNameTemplate": "nodejs/node",
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^v(?<version>\\S+)"
