--- a/plugins/rust.json5
+++ b/plugins/rust.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["rust (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)rust (?<currentValue>.+?)\\n"],
       // https://github.com/rust-lang/rust/tags
       "depNameTemplate": "rust-lang/rust",
       "datasourceTemplate": "github-tags"
