--- a/plugins/zig.json5
+++ b/plugins/zig.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["zig (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)zig (?<currentValue>.+?)\\n"],
       // https://github.com/ziglang/zig/tags
       "depNameTemplate": "ziglang/zig",
       "datasourceTemplate": "github-tags"
