Prefer json rather than json5 for toplevel configs
https://github.com/kachick/renovate-config-asdf/pull/209#issuecomment-1278970463

--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -9,7 +9,7 @@ on:
       - 'package-lock.json'
       - 'default.json'
       - 'renovate.json'
-      - 'self.json5'
+      - 'self.json'
   pull_request:
     paths:
       - '.github/workflows/ci-official.yml'
@@ -18,7 +18,7 @@ on:
       - 'package-lock.json'
       - 'default.json'
       - 'renovate.json'
-      - 'self.json5'
+      - 'self.json'
 
 jobs:
   set-matrix:
