Pin node version to LTS 18
https://github.com/kachick/renovate-config-asdf/pull/221
https://github.com/kachick/wait-other-jobs/pull/213

--- a/renovate.json
+++ b/renovate.json
@@ -20,6 +20,10 @@
     {
       "matchDepTypes": ["devDependencies"],
       "automerge": true
+    },
+    {
+      "matchPackageNames": ["nodejs/node"],
+      "allowedVersions": "/^v?18\\./"
     }
   ],
   "labels": [
